2008-08-04  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Include Flumotion: in the tray message.

2008-08-04  Johan Dahlin  <johan@flumotion.com>

	* configure.ac: Avoid brackets around parameter to
	AS_VERSION

2008-08-04  Johan Dahlin  <johan@flumotion.com>

	* configure.ac: Send in package and version to AC_INIT instead
	of AM_INIT_AUTOMAKE. Add M4 defines for version components,
	so we don't have to duplicate the numbers.
	Add -Wno-portability, to avoid automake warnings when generating
	Makefiles.

2008-08-04  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/message.py:
	* flumotion/common/messages.py:
	* flumotion/wizard/configurationwizard.py:
	Add an api to disable the timestamps in the messageview.
	Move getattr hacks to the Message class itself, add two
	new methods to encapsulate them.
	Disable timestamps for the messageview in the wizard.
	Fixes #1088

2008-08-04  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Listen to key presses on the window and quite if control-w
	is pressed. Fixes #1074

2008-08-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	  If we have versionTupleToString, we should have the reverse here
	  too.
	* flumotion/manager/manager.py:
	  Use versionStringToTuple.
	  Since version in the config is tied to the project, not core
	  Flumotion, check if the given project actually exists, and
	  then check the component's configured version against the project
	  version.

2008-08-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/common.mk:
	  pep8-check the flumotion subdirectories, not cache and friends.

2008-08-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/project/project.py:
	  Allow getting variables from core flumotion, to avoid having
	  to special-case code everywhere.

2008-08-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/common.mk: